[gd_scene load_steps=59 format=2]

[ext_resource path="res://01_scenes/02_Game/game_conductor.gd" type="Script" id=1]
[ext_resource path="res://01_scenes/02_Game/game_master.gd" type="Script" id=2]
[ext_resource path="res://01_scenes/02_Game/game_background.gd" type="Script" id=3]
[ext_resource path="res://01_scenes/02_Game/game_loop_sfx.gd" type="Script" id=4]
[ext_resource path="res://01_scenes/02_Game/game_debug_text.gd" type="Script" id=5]
[ext_resource path="res://01_scenes/02_Game/game_character.gd" type="Script" id=6]
[ext_resource path="res://01_scenes/02_Game/game_score.gd" type="Script" id=7]
[ext_resource path="res://00_assets/sfx/game/lvl_up.ogg" type="AudioStream" id=8]
[ext_resource path="res://01_scenes/02_Game/game_input.gd" type="Script" id=9]
[ext_resource path="res://00_assets/sprites/hud/game_perfect.png" type="Texture" id=10]
[ext_resource path="res://00_assets/sprites/hud/nice.png" type="Texture" id=11]
[ext_resource path="res://00_assets/sprites/hud/game_great.png" type="Texture" id=12]
[ext_resource path="res://00_assets/sprites/hud/game_good.png" type="Texture" id=13]
[ext_resource path="res://00_assets/sprites/hud/bar.png" type="Texture" id=14]
[ext_resource path="res://00_assets/sprites/hud/hud_over1.png" type="Texture" id=15]
[ext_resource path="res://00_assets/sprites/hud/hud_progress2.png" type="Texture" id=16]
[ext_resource path="res://00_assets/materials/background.tres" type="Material" id=17]
[ext_resource path="res://00_assets/sfx/ui/ui_back.ogg" type="AudioStream" id=18]
[ext_resource path="res://00_assets/sprites/hud/perfect.png" type="Texture" id=19]
[ext_resource path="res://00_assets/easter_egg/broken_heart.png" type="Texture" id=20]
[ext_resource path="res://00_assets/sfx/ui/ui_accept.ogg" type="AudioStream" id=21]
[ext_resource path="res://02_prefabs/NoteDetector/NoteDetector.tscn" type="PackedScene" id=22]
[ext_resource path="res://02_prefabs/Volume/Volume.tscn" type="PackedScene" id=23]
[ext_resource path="res://00_assets/fonts/HelvetiPixel.ttf" type="DynamicFontData" id=24]
[ext_resource path="res://00_assets/fonts/Mars_Needs_Cunnilingus.ttf" type="DynamicFontData" id=25]
[ext_resource path="res://00_assets/animations/presets/Fx.tres" type="Animation" id=26]
[ext_resource path="res://00_assets/animations/presets/Pump.tres" type="Animation" id=27]
[ext_resource path="res://01_scenes/02_Game/game_screen_fx.gd" type="Script" id=28]
[ext_resource path="res://01_scenes/02_Game/EasterEgg.gd" type="Script" id=29]
[ext_resource path="res://00_assets/easter_egg/im_shaking_and_crying.ogg" type="AudioStream" id=30]
[ext_resource path="res://00_assets/easter_egg/break_2.ogg" type="AudioStream" id=31]
[ext_resource path="res://00_assets/easter_egg/break_1.ogg" type="AudioStream" id=32]
[ext_resource path="res://00_assets/easter_egg/game_over.png" type="Texture" id=33]
[ext_resource path="res://00_assets/easter_egg/heart_particles.tscn" type="PackedScene" id=34]
[ext_resource path="res://00_assets/easter_egg/8bitoperator.ttf" type="DynamicFontData" id=35]
[ext_resource path="res://00_assets/easter_egg/toriel.wav" type="AudioStream" id=36]
[ext_resource path="res://01_scenes/02_Game/ToriText.gd" type="Script" id=37]
[ext_resource path="res://01_scenes/02_Game/PauseMenu.gd" type="Script" id=38]
[ext_resource path="res://00_assets/fonts/crypt-of-tomorrow-ut-font-no-rus.ttf" type="DynamicFontData" id=39]
[ext_resource path="res://00_assets/sfx/menu/paused.ogg" type="AudioStream" id=40]
[ext_resource path="res://00_assets/sfx/menu/unpaused.ogg" type="AudioStream" id=41]
[ext_resource path="res://00_assets/sfx/ui/ui_tick.ogg" type="AudioStream" id=42]
[ext_resource path="res://00_assets/sfx/menu/pause_selected.ogg" type="AudioStream" id=43]

[sub_resource type="Animation" id=1]
resource_name = "loop_24"
length = 2.0
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333, 0.666666, 0.75, 0.833333, 0.916666, 1, 1.08333, 1.16667, 1.25, 1.33333, 1.41667, 1.5, 1.58333, 1.66667, 1.75, 1.83333, 1.91667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ null, ExtResource( 13 ), ExtResource( 12 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=3]
size = 26
font_data = ExtResource( 25 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 25 )

[sub_resource type="DynamicFont" id=5]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 24 )

[sub_resource type="DynamicFont" id=6]
size = 64
font_data = ExtResource( 25 )

[sub_resource type="DynamicFont" id=7]
size = 36
font_data = ExtResource( 24 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 19 ) ],
"loop": false,
"name": "default",
"speed": 0.0
} ]

[sub_resource type="DynamicFont" id=9]
size = 24
font_data = ExtResource( 35 )

[sub_resource type="DynamicFont" id=10]
size = 24
font_data = ExtResource( 24 )

[sub_resource type="DynamicFont" id=11]
size = 24
font_data = ExtResource( 24 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=13]
size = 24
font_data = ExtResource( 39 )

[sub_resource type="DynamicFontData" id=14]
font_path = "res://00_assets/fonts/HelvetiPixel.ttf"

[sub_resource type="DynamicFont" id=15]
size = 36
font_data = SubResource( 14 )

[node name="Game" type="Node2D"]
script = ExtResource( 2 )

[node name="Music" type="AudioStreamPlayer" parent="."]
pause_mode = 2
bus = "Game"
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="Music"]
pause_mode = 1

[node name="Background" type="Sprite" parent="."]
material = ExtResource( 17 )
position = Vector2( 300, 400 )
script = ExtResource( 3 )

[node name="Tween" type="Tween" parent="Background"]

[node name="Character" type="Sprite" parent="."]
position = Vector2( 300, 400 )
hframes = 3
vframes = 2
script = ExtResource( 6 )

[node name="Anim" type="AnimationPlayer" parent="Character"]
anims/Pump = ExtResource( 27 )

[node name="Tween" type="Tween" parent="Character"]

[node name="Transition" type="Sprite" parent="Character"]
position = Vector2( -301, -400 )
centered = false
hframes = 6
vframes = 4

[node name="Anim" type="AnimationPlayer" parent="Character/Transition"]
anims/loop_24 = SubResource( 1 )
anims/loop_6 = ExtResource( 26 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="HUD"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bar" type="Sprite" parent="HUD/Control"]
position = Vector2( 300, 750 )
texture = ExtResource( 14 )

[node name="Heart" parent="HUD/Control/Bar" instance=ExtResource( 22 )]
position = Vector2( 0, 0 )
scale = Vector2( 0.8, 0.8 )

[node name="Accuracy_Text" type="AnimatedSprite" parent="HUD/Control/Bar"]
position = Vector2( 0, -60 )
frames = SubResource( 2 )

[node name="Tween" type="Tween" parent="HUD/Control/Bar/Accuracy_Text"]

[node name="Combo" type="Label" parent="HUD/Control/Bar"]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -138.0
margin_right = -300.0
margin_bottom = -111.0
rect_pivot_offset = Vector2( 300, 13.5 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 0.403922 )
text = "X00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="HUD/Control/Bar/Combo"]

[node name="Volume" parent="HUD/Control" instance=ExtResource( 23 )]
visible = false

[node name="Score" type="Label" parent="HUD/Control"]
margin_left = 24.0
margin_top = 24.0
margin_right = 156.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 4 )
text = "Score : "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="value" type="Label" parent="HUD/Control/Score"]
margin_left = 97.0
margin_right = 112.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 4 )
text = "0"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Progress" type="TextureProgress" parent="HUD/Control/Score"]
margin_left = -7.0
margin_top = 26.0
margin_right = 121.0
margin_bottom = 58.0
size_flags_horizontal = 3
size_flags_vertical = 3
value = 99.0
texture_over = ExtResource( 15 )
texture_progress = ExtResource( 16 )
radial_initial_angle = 90.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugLabel" type="Label" parent="HUD"]
visible = false
margin_left = 25.0
margin_top = 93.9028
margin_right = 93.0
margin_bottom = 121.903
size_flags_vertical = 1
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Debug"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Control" parent="."]
visible = false
margin_right = 600.0
margin_bottom = 800.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Black" type="ColorRect" parent="GameOver"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="GameOver"]
margin_top = 300.0
margin_right = 600.0
margin_bottom = 364.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GameOver/MarginContainer"]
margin_right = 600.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 6 )
text = "GAME OVER"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="GameOver"]
margin_top = 380.0
margin_right = 600.0
margin_bottom = 444.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GameOver/MarginContainer2"]
margin_top = 16.0
margin_right = 600.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 7 )
text = "Press R to retry"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="GameOver"]
margin_top = 420.0
margin_right = 600.0
margin_bottom = 484.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GameOver/MarginContainer3"]
margin_top = 16.0
margin_right = 600.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 7 )
text = "Press V to quit"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverSound" type="AudioStreamPlayer" parent="GameOver"]

[node name="ScreenFX" type="Node" parent="."]
script = ExtResource( 28 )

[node name="Light" type="ColorRect" parent="ScreenFX"]
margin_right = 600.0
margin_bottom = 800.0
color = Color( 0, 0, 0, 0.215686 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="ScreenFX/Light"]

[node name="Fade" type="ColorRect" parent="ScreenFX"]
margin_right = 600.0
margin_bottom = 800.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="ScreenFX/Fade"]

[node name="BreakFX" type="ColorRect" parent="ScreenFX"]
margin_right = 600.0
margin_bottom = 800.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="ScreenFX/BreakFX"]

[node name="SectionSound" type="AudioStreamPlayer" parent="ScreenFX/BreakFX"]
stream = ExtResource( 8 )
volume_db = -5.0
pitch_scale = 1.5
bus = "SFX"

[node name="_hit" type="AnimatedSprite" parent="ScreenFX"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 300, 400 )
frames = SubResource( 8 )

[node name="Tween" type="Tween" parent="ScreenFX/_hit"]

[node name="SoundEffects" type="Node" parent="."]
script = ExtResource( 4 )

[node name="ui_accept" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource( 21 )
volume_db = -3.0
bus = "SFX"

[node name="ui_back" type="AudioStreamPlayer" parent="SoundEffects"]
stream = ExtResource( 18 )
volume_db = 6.0
bus = "SFX"

[node name="hit_sound" type="AudioStreamPlayer" parent="SoundEffects"]
volume_db = -6.0
bus = "SFX"

[node name="LoopSound" type="AudioStreamPlayer" parent="SoundEffects"]
bus = "SFX"

[node name="TransitionSound" type="AudioStreamPlayer" parent="SoundEffects"]
volume_db = -6.0
bus = "SFX"

[node name="VoiceSound" type="AudioStreamPlayer" parent="SoundEffects"]
bus = "Voice"

[node name="ClimaxSound" type="AudioStreamPlayer" parent="SoundEffects"]
bus = "Voice"

[node name="EasterEgg" type="Control" parent="."]
visible = false
margin_right = 600.0
margin_bottom = 800.0
script = ExtResource( 29 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="EasterEgg"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart" type="Sprite" parent="EasterEgg"]
position = Vector2( 300, 400 )
scale = Vector2( 2, 2 )
texture = ExtResource( 20 )

[node name="GameOverText" type="Sprite" parent="EasterEgg"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 300, 270.833 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 33 )

[node name="Tween" type="Tween" parent="EasterEgg/GameOverText"]

[node name="Break1" type="AudioStreamPlayer" parent="EasterEgg"]
stream = ExtResource( 32 )

[node name="Break2" type="AudioStreamPlayer" parent="EasterEgg"]
stream = ExtResource( 31 )

[node name="SadMusic" type="AudioStreamPlayer" parent="EasterEgg"]
stream = ExtResource( 30 )

[node name="Tween" type="Tween" parent="EasterEgg/SadMusic"]

[node name="Hearticles" parent="EasterEgg" instance=ExtResource( 34 )]

[node name="CenterContainer" type="CenterContainer" parent="EasterEgg"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 276.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToriText" type="Label" parent="EasterEgg/CenterContainer"]
margin_left = 261.0
margin_top = 243.0
margin_right = 338.0
margin_bottom = 280.0
custom_fonts/font = SubResource( 9 )
text = "_text"
align = 1
valign = 1
percent_visible = 0.0
script = ExtResource( 37 )

[node name="Tween" type="Tween" parent="EasterEgg/CenterContainer/ToriText"]

[node name="Voice" type="AudioStreamPlayer" parent="EasterEgg/CenterContainer/ToriText"]
stream = ExtResource( 36 )

[node name="Options" type="Control" parent="EasterEgg"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="Label" parent="EasterEgg/Options"]
margin_left = 40.0
margin_top = 699.0
margin_right = 560.0
margin_bottom = 720.0
custom_fonts/font = SubResource( 10 )
text = "Press R to retry"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Label" parent="EasterEgg/Options"]
margin_left = 40.0
margin_top = 719.0
margin_right = 560.0
margin_bottom = 740.0
custom_fonts/font = SubResource( 11 )
text = "Press V to quit"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Input" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 9 )

[node name="PauseMenu" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 2
script = ExtResource( 38 )

[node name="MenuTick" type="AudioStreamPlayer" parent="PauseMenu"]
stream = ExtResource( 42 )

[node name="Selected" type="AudioStreamPlayer" parent="PauseMenu"]
stream = ExtResource( 43 )

[node name="Back" type="AudioStreamPlayer" parent="PauseMenu"]
stream = ExtResource( 18 )

[node name="Frame" type="Control" parent="PauseMenu"]
visible = false
margin_right = 600.0
margin_bottom = 800.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="PauseMenu/Frame"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.776471 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="PauseMenu/Frame"]
margin_top = 260.0
margin_right = 601.0
margin_bottom = 540.0
custom_styles/panel = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="PauseMenu/Frame/Panel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -80.0
margin_bottom = -51.0
custom_fonts/font = SubResource( 13 )
text = "PAUSED"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeLabel" type="Label" parent="PauseMenu/Frame/Panel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -10.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 15 )
text = "Resume"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartLabel" type="Label" parent="PauseMenu/Frame/Panel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 30.0
margin_right = -1.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 15 )
text = "Start Over"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitLabel" type="Label" parent="PauseMenu/Frame/Panel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -1.0
margin_top = 70.0
margin_right = -1.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 15 )
text = "Exit to Menu"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fade" type="ColorRect" parent="PauseMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="PauseMenu/Fade"]

[node name="UnPauseSound" type="AudioStreamPlayer" parent="PauseMenu"]
stream = ExtResource( 40 )
volume_db = -2.0

[node name="PauseSound" type="AudioStreamPlayer" parent="PauseMenu"]
stream = ExtResource( 41 )
volume_db = -2.0

[connection signal="beat" from="Music" to="." method="_on_Music_beat"]
[connection signal="timeout" from="Music/Timer" to="Music" method="_on_Timer_timeout"]
[connection signal="hitNote" from="HUD/Control/Bar/Heart" to="." method="_on_Heart_hitNote"]
[connection signal="missedNote" from="HUD/Control/Bar/Heart" to="." method="_on_Heart_missedNote"]
[connection signal="paused" from="Input" to="Music" method="_on_paused"]
[connection signal="paused" from="Input" to="PauseMenu" method="_on_paused"]
[connection signal="resumed" from="PauseMenu" to="Music" method="_on_resume"]
[connection signal="resumed" from="PauseMenu" to="PauseMenu" method="_on_resumed"]
